# grpc-performance-poc

./: .gitignore  README.md  build.sh  ghz_config.json
go_version/: go.mod  go.sum
go_version/cmd/client/: bench_test.go
go_version/cmd/server/: main.go
go_version/internal/service/: entity_service.go
go_version/internal/snowflake/: snowflake.go
proto/: model.proto
results/: go_result.html  rust_result.html
rust_version/: Cargo.toml
rust_version/proto/: model.proto
rust_version/src/client/: main.rs
rust_version/src/load_balancer/: entity_service.rs  main.rs
